# learner

./: .gitignore  .readthedocs.yml  README.md  pyproject.toml  pytest.ini
docs/: Makefile  conf.py  index.rst  intro.md  modules.rst
nbs/: template.ipynb
public/doctrees/: index.doctree  intro.doctree  modules.doctree
public/doctrees/tutorials/: quick-start.doctree
public/html/: .buildinfo  genindex.html  index.html  intro.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
public/html/_modules/: index.html
public/html/_modules/learner/: base.html  callbacks.html  data.html  device.html  metrics.html  trainer.html
public/html/_modules/learner/models/: ae.html  vision.html
public/html/_sources/: index.rst.txt
public/html/tutorials/: quick-start.html
src/learner/: __init__.py  base.py  callbacks.py  data.py  device.py  metrics.py  trainer.py
src/learner/models/: __init__.py  ae.py  vision.py
src/learner/wrappers/: sklearn.py
tests/: test_learner.py
