[tool.poetry]
name = "learner"
version = "0.1.0"
description = "One learner to learn the world"
authors = ["yajiez <yajiez.me@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/yajiez/learner"
repository = "https://github.com/yajiez/learner"
documentation = ""
keywords = ["Learner", "Artificial Intelligence", "Machine Learning"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.17.4"
scipy = "^1.4.0"
pandas = "^0.25.3"
matplotlib = "^3.1.2"
scikit-learn = "^0.22"
torch = "^1.3.1"
torchvision = "^0.4.2"
utify = "^0.1.0"
sphinx = {version = "^2.3.0", optional = true}
nbsphinx = {version = "^0.5.0", optional = true}
recommonmark = {version = "^0.6.0", optional = true}
sphinx_rtd_theme = {version = "^0.4.3", optional = true}
psutil = "^5.6.7"

[tool.poetry.extras]
doc = ['sphinx', 'nbsphinx', 'recommonmark', 'sphinx_rtd_theme']

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^5.1.3"
ipython = "^7.10.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
